--- a/src/app/party/alias/alias.component.scss
+++ b/src/app/party/alias/alias.component.scss
@@ -31,3 +31,9 @@ button {
   width: 100%;
   height: 59.5px;
 }
+
+.bottom-logo{
+  width: 20vh;
+  bottom: 0;
+  position: absolute;
+}
